application-workloads/cohesive/cohesive-vns3-free-multiclient-overlay-linux/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "adminUsername": {
            "type": "string",
            "metadata": {
                "description": "Admin User Name for VNS3 (required but not used)"
            }    
        },
        "adminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "Admin Password for VNS3 (required but not used)"
            }
        },
        "adminUsernameUbuntu": {
            "type": "string",
            "metadata": {
                "description": "Admin User Name for Ubuntu VM"
            }    
        },
        "adminPasswordUbuntu": {
            "type": "securestring",
            "metadata": {
                "description": "Admin Password for Ubuntu VM"
            }
        },
        "numberOfInstances": {
            "type": "int",
            "minValue": 1,
            "maxValue": 5,
            "metadata": {
              "description": "VMs to deploy, max 5 as free edition only supports 5 clientpacks"
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Deployment location"
            }
        },
        "instanceSize": {
            "type": "string",
            "metadata": {
                "description": "Size of VM instance, defaults to Standard_B1ms to keep within core limits while giving reasonable performance"
            },
            "defaultValue": "Standard_B1ms"
        },
        "_artifactsLocation": {
            "type": "string",
            "metadata": {
                "description": "The base URI where artifacts required by this template are located including a trailing '/'"
            },
            "defaultValue": "[deployment().properties.templateLink.uri]"
        },
        "_artifactsLocationSasToken": {
            "type": "securestring",
            "metadata": {
                "description": "The sasToken required to access _artifactsLocation.  When the template is deployed using the accompanying scripts, a sasToken will be automatically generated. Use the defaultValue if the staging location is not secured."
            },
            "defaultValue":""
        }
             
    },
    "variables": {
        "suffix": "[uniqueString(resourceGroup().id, parameters('location'))]",
        "resourceGroupName": "[toLower(resourceGroup().name)]",
        "storageAccount": "[substring(concat(parameters('location'),'storage', variables('suffix')), 0, 24)]",
        "virtualNetworkName": "[concat(variables('resourceGroupName'), '-vnet')]",
        "vns3ControllerName": "VNS3Controller",
        "networkInterfaceName": "[toLower(concat(variables('vns3ControllerName'), '-nic'))]",
        "publicIPAddresseName": "[concat(variables('vns3ControllerName'), '-ip')]",
        "networkSecurityGroupName": "[concat(variables('vns3ControllerName'), '-nsg')]",
        "virtualSubnetName": "VNS3_VirtualSubnet",
        "vnetSubnet":"10.10.10.0/28",
        "vnsStaticIp": "10.10.10.10",
        "CustomScriptForLinux": "CustomScript",
        "scriptFileUri": "[uri(parameters('_artifactsLocation'), concat('scripts/customextensionlinux.sh', parameters('_artifactsLocationSasToken')))]",
        "CustomScriptCommandToExecute": "sudo bash customextensionlinux.sh",
        "ubuntu": {
            "publisher": "Canonical",
            "offer": "UbuntuServer",
            "sku": "16.04.0-LTS",
            "version": "latest"    
        }      
    },
    "resources": [
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2020-12-01",
            "name": "[variables('vns3ControllerName')]",
            "location": "[parameters('location')]",
            "plan": {
                "name": "cohesive-vns3-4_11_x-free",
                "product": "vns3_4x_network_security",
                "publisher": "cohesive"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccount'))]"
            ],
            "tags": {
                "Name": "VNS3 Controller"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('instanceSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "cohesive",
                        "offer": "vns3_4x_network_security",
                        "sku": "cohesive-vns3-4_11_x-free",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(variables('vns3ControllerName'), '-disc')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "StandardSSD_LRS"
                        },
                        "diskSizeGB": 30
                    }
                    
                },
                "osProfile": {
                    "computerName": "[variables('vns3ControllerName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true
                    },
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(variables('storageAccount'),'2020-08-01-preview').primaryEndpoints['blob']]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-07-01",
            "name": "[variables('networkInterfaceName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresseName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('virtualSubnetName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
            ],
            "tags": {
                "Name": "VNS3 Controller"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[variables('vnsStaticIp')]",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIPAddresseName'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('virtualSubnetName'))]"
                            },
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": true,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-07-01",
            "name": "[variables('networkSecurityGroupName')]",
            "location": "[parameters('location')]",
            "tags": {
                "Name": "VNS3 Controller"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "VNS3_Web_API_Port",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8000",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "VNS3_UDP_1194",
                        "properties": {
                            "protocol": "Udp",
                            "sourcePortRange": "1194",
                            "destinationPortRange": "1194",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "VNS3_UDP_500",
                        "properties": {
                            "protocol": "Udp",
                            "sourcePortRange": "500",
                            "destinationPortRange": "500",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "VNS3_NAT_T",
                        "properties": {
                            "protocol": "Udp",
                            "sourcePortRange": "4500",
                            "destinationPortRange": "4500",
                            "sourceAddressPrefix": "1.2.3.4/32",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 400,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-07-01",
            "name": "[variables('publicIPAddresseName')]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "tags": {
                "Name": "VNS3 Controller"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4                
             }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-07-01",
            "name": "[variables('virtualNetworkName')]",
            "location": "[parameters('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vnetSubnet')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "VNS3_VirtualSubnet",
                        "properties": {
                            "addressPrefix": "[variables('vnetSubnet')]"
                        }
                    }
                ],
                "enableDdosProtection": false,
                "enableVmProtection": false
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2020-08-01-preview",
            "name": "[variables('storageAccount')]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": false,
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-07-01",
            "name": "[concat(variables('virtualNetworkName'), '/', variables('virtualSubnetName'))]",
            "properties": {
                "addressPrefix": "[variables('vnetSubnet')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-07-01",
            "name": "[concat('pip-ubuntuvm', copyindex())]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "copy": {
                "name": "PublicIpLoop",
                "count": "[parameters('numberOfInstances')]"
              },
            "tags": {
                "Name": "VNS3 Controller"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4            
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-07-01",
            "name": "[concat('nic-ubuntuvm', copyindex())]",
            "location": "[parameters('location')]",
            "copy": {
              "name": "NicLoop",
              "count": "[parameters('numberOfInstances')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('virtualSubnetName'))]",
                "SecurityLoop",
                "PublicIpLoop"
            ],
            "properties": {
              "ipConfigurations": [
                {
                  "name": "ipconfig1",
                  "properties": {
                    "privateIPAllocationMethod": "Dynamic",
                    "publicIPAddress": {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses',concat('pip-ubuntuvm', copyindex()))]"
                    },
                    "subnet": {
                      "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('virtualSubnetName'))]"
                    }
                  }
                }
              ],
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat('nsg-ubuntuvm', copyindex()))]"
              }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-07-01",
            "name": "[concat('nsg-ubuntuvm', copyindex())]",
            "location": "[parameters('location')]",
            "copy": {
                "name": "SecurityLoop",
                "count": "[parameters('numberOfInstances')]"
              },
            "tags": {
                "Name": "VNS3 Controller"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    }
                ]                
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2020-12-01",
            "name": "[concat('ubuntuvm', copyIndex())]",
            "location": "[parameters('location')]",
            "copy": {
              "name": "virtualMachineLoop",
              "count": "[parameters('numberOfInstances')]"
            },
            "dependsOn": [
              "NicLoop"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('instanceSize')]"
                },
                "osProfile": {
                    "computerName": "[concat('ubuntuvm', copyIndex())]",
                    "adminUsername": "[parameters('adminUsernameUbuntu')]",
                    "adminPassword": "[parameters('adminPasswordUbuntu')]"
                },
                "storageProfile": {
                    "imageReference": "[variables('ubuntu')]",
                    "osDisk": {
                      "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                    {
                        "id": "[resourceId('Microsoft.Network/networkInterfaces',concat('nic-ubuntuvm', copyindex()))]"
                    }
                ]
              }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "apiVersion": "2020-12-01",
            "name": "[concat('ubuntuvm', copyIndex(), '/', variables('CustomScriptForLinux'))]",
            "location": "[parameters('location')]",
            "copy": {
                "name": "CustomScripLoop",
                "count": "[parameters('numberOfInstances')]"
            },
             "dependsOn": [
                "virtualMachineLoop"
            ],
            "properties": {
                "publisher": "Microsoft.Azure.Extensions",
                "type": "[variables('CustomScriptForLinux')]",
                "typeHandlerVersion": "2.0",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[variables('scriptFileUri')]"
                    ],
                    "commandToExecute": "[variables('CustomScriptCommandToExecute')]"
                }
            }
        }
    ]
}
